# OpenMCServer

./: .gitignore  .gitmodules  CMakeLists.txt  Structure.md
src/: Client.cpp  Client.hpp  Random.cpp  Random.hpp  Server.cpp  Server.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp  main.cpp  main.h  utils.cpp  utils.hpp
src/world/: Chunk.cpp  Chunk.hpp  World.cpp  World.hpp
